Update color to logo, fix spacing

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  height: 20%;
+  height: 15%;
   background-color: #293241;
   color: white;
 }
@@ -36,7 +36,7 @@ body {
   width: 50%;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .nav-bar-links p:hover,
@@ -99,7 +99,7 @@ body {
 .main-section {
   display: flex;
   flex-direction: column;
-  height: 200%;
+  height: 150%;
   overflow: scroll;
   background-color: #98c1d9;
 }
@@ -107,7 +107,7 @@ body {
 .main-section-shares {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   height: 10%;
 }
 
@@ -125,8 +125,8 @@ body {
   grid-template-columns: repeat(4, 1fr);
   overflow: scroll;
   grid-gap: 20px;
-  padding: 20px;
-  height: 150%;
+  padding: 15px;
+  height: 100%;
 }
 
 /* ~~~~~~~ GRID CARD RULES ~~~~~~~ */
@@ -136,7 +136,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 90%;
+  height: 80%;
   border-radius: 5px;
   background-color: #e0fbfc;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -146,7 +146,7 @@ body {
 .grid-card-img {
   display: flex;
   justify-content: space-between;
-  height: 25%;
+  height: 28%;
   width: 100%;
   border-radius: 5px;
   background-color: #ee6c4d;
@@ -165,7 +165,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 45%;
+  height: 50%;
   width: 15%;
   margin-top: 10px;
   margin-right: 10px;
